<resources>
    <string name="app_name">FarmaClub</string>

    <!-- Strings definidas para la App de Farmacias-->

    <!-- edit Text-->
    <string name="edtUsuarioT">Numero Tarjeta</string>
    <string name="edtUsuarioU">Usuario</string>
    <string name="edtNuevoUsuario">Nuevo Usuario</string>
    <string name="edtContrasenia">Contraseña</string>
    <string name="edtRepetirContrasenia">Repetir Contraseña</string>
    <string name="edtMisDatosNombre">Nombre y Apellido</string>
    <string name="edtMisDatosCorreo">Direccion de correo electronico</string>
    <string name="edtMisDatosTelefono">Numero de Telefono</string>
    <string name="edtMisDatosDireccion">Direccion</string>
    <string name="edtMisDatosLocalidad">Localidad</string>
    <string name="edtMisDatosCodpos">Cod. Postal</string>
    <string name="edtMisDatosFechaNacimiento">Fecha de Nacimiento</string>

    <!-- text View-->
    <string name="tvTerminos"><u>VER Terminos y Condiciones</u></string>
    <string name="cbTerminos">ACEPTAR Terminos y Condiciones</string>
    <string name="tvTerminosDownload">Se estan descargando las bases de <u>Terminos y Condiciones</u></string>
    <string name="tvTengoUsuario">Ya tengo <u>Usuario y Contraseña</u></string>
    <string name="tvOlvideUsuario"><u>Olvide mi Usuario y/o Contraseña</u></string>
    <string name="tvPuntosDisponibles">Puntos Acumulados:</string>
    <string name="tvBuzonNovedades">Buzon de Novedades</string>

    <!-- botones-->
    <string name="btnIngresar">Ingresar</string>
    <string name="btnReestablecer">Reestablecer</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnVolver">Volver</string>
    <string name="btnPrev">&lt;</string>
    <string name="btnNext">&gt;</string>
    <string name="rbNombre">Nombre</string>
    <string name="rbPuntos">Puntos</string>
    <string name="rbAsc">Ascendende</string>
    <string name="rbDesc">Descendente</string>
    <string name="rbTodosPuntos">Todos los puntos</string>
    <string name="rbPuntosDisponibles">Puntos Disponibles</string>


    <!-- check box-->
    <string name="cbRecordarUsuario">Recordar Usuario.</string>

    <!-- toast -->
    <string name="toastOlvideUsuario">Se enviara un mail a su casilla de correo con los pasos para reestablecer su Usuario y Contraseña.</string>
    <string name="toastErrorReestablecerUsuario">Se produjo un error reestableciendo su Usuario y Contraseña. Intente nuevamente.</string>

    <!-- mensajes de errores -->
    <string name="error_invalid_password">El tamaño de la contraseña es incorrecto (entre 4 y 15).</string>
    <string name="error_incorrect_password">La contraseña es incorrecta.</string>
    <string name="error_field_required">Este campo es Obligatorio.</string>
    <string name="usuario_deconocido">Usuario y/o contraseña invalidos.</string>
    <string name="servidor_timeout">No es posible conectarse al Servidor.</string>
    <string name="servidor_error">Se ha producido un error en el Servidor.</string>
    <string name="passwords_diferentes">Las contraseñas no coinciden.</string>
    <string name="usuario_existente">El usuario ya existe.</string>
    <string name="usuario_invalido">Usuario no valido.</string>
    <string name="error_update">No se pudo generar el usuario.</string>

    <!-- menu -->
    <!--
    <string name="action_settings">Configurar</string>
    -->
    <string name="action_settings">Ordenar</string>
    <string name="action_preferences">Preferencias</string>
    <string name="action_edit_data">Editar Datos</string>


    <!-- menu desplegable -->
    <string name="title_activity_main2">FarmaClub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FarmaClub</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">FarmaClub App</string>

    <!-- Strings related to login -->

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- strings comentadas
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>

     -->
</resources>
